поправил z-index у подарка и fix-buy

--- a/src/scss/components/_buy_car_fixed.scss
+++ b/src/scss/components/_buy_car_fixed.scss
@@ -11,7 +11,7 @@
 
 		// left: 0;
 		// right: 0;
-		z-index: 20;
+		z-index: 100;
 
 		width: 100%;
 
