--- a/src/scss/components/_present.scss
+++ b/src/scss/components/_present.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	left: 15px;
 	bottom: 120px;
-	z-index: 10;
+	z-index: 100;
 	display: flex;
 	flex-direction: column;
 
